fixing main page content display on mobile

--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,90 @@ body a {
 .hidden {
   display: none;
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    padding-top: 120px;
+  }
+  
+  .navbar {
+    background-color: rgba(32, 33, 36, 1);
+    display: flex;
+    flex-direction: row;
+    gap: 85px;
+    height: 100px;
+    width: 100%;
+  }
+
+  .logo {
+    font-size: 12px;
+    margin-left: 20px;
+    
+  }
+
+  .navbar input {
+    height: 30px;
+    width: 200px;
+    border-radius: 40px;
+    text-align: center;
+    color: black;
+    border: none;
+  }
+  .navbar button {
+    height: 30px;
+    width: 30px;
+  }
+
+  .grids{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-auto-rows: auto;
+    margin: 2em 2em;
+  }
+
+  .title h1 {
+    margin: 1em auto 0px 1em;
+    font-size: 25px;
+  }
+
+  .cards {
+    height: 24em;
+    width: 200px;
+  }
+
+  .card-img {
+    width: 200px;
+    margin-top: 0;
+  }
+  
+  .card-img img {
+    justify-content: center;
+    width: 10em;
+    margin-top: 1em;
+  }
+
+  .card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    margin-left: 10px;
+    margin-top: 15px;
+  }
+  
+  .year-time {
+    display: flex;
+    flex-direction: row;
+    gap: 4.5em;
+  }
+
+  .rating-age {
+    display: flex;
+    flex-direction: row;
+    gap: 4.5em;
+    margin-top: 12px;
+    font-size: 15px;
+  }
+
+  }
+
+  
